== In Git

=== New Features

=== Bugfixes

== 0.0.1 (24.01.2011)

=== New Features
* define the attributes, which name your model [Yves Senn]
* define the name of your model with a block [Yves Senn]
* basic API for storing, accessing and building named models [Yves Senn]
* factory_girl support [Yves Senn]

=== Bugfixes
* reload models before the return [Yves Senn]